[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-multivariate-conformal"
version = "0.1.0"
description = "Joint multi-output conformal prediction intervals for insurance pricing models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "conformal prediction",
    "insurance",
    "joint prediction intervals",
    "multivariate",
    "frequency severity",
    "solvency II",
    "SCR",
    "actuarial",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "polars>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "matplotlib>=3.7",
    "scipy>=1.10",
]
plots = [
    "matplotlib>=3.7",
]
scipy = [
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-multivariate-conformal"
Repository = "https://github.com/burning-cost/insurance-multivariate-conformal"
"Bug Tracker" = "https://github.com/burning-cost/insurance-multivariate-conformal/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_multivariate_conformal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
